📱  Fix menu on mobile

--- a/themes/reli/assets/fresh/partials/_hero.scss
+++ b/themes/reli/assets/fresh/partials/_hero.scss
@@ -46,7 +46,7 @@ Hero styles
 
 @media (max-width: 1000px) {
   .hero-body {
-    padding: 10rem 2rem 2rem 2rem;
+    padding: 10rem 0 2rem 0;
 
     & .title {
       background: rgba(0,0,0,0.3);
