--- a/themes/reli/assets/fresh/partials/_navbar.scss
+++ b/themes/reli/assets/fresh/partials/_navbar.scss
@@ -23,6 +23,11 @@ Navbar
   .navbar-burger {
     width: 4rem;
     height: 4rem;
+    color: $white;
+
+    &.is-active {
+      color: $muted-grey;
+    }
   }
   //Brand
   .navbar-brand {
@@ -57,6 +62,10 @@ Navbar
       }
     }
   }
+  .navbar-menu.is-active {
+    position: relative;
+    top: 110px;
+  }
   .navbar-end {
     align-items: center;
     img {
@@ -74,6 +83,10 @@ Navbar
       letter-spacing: 1px;
       color: $white;
 
+      @media all and (max-width: $desktop) {
+        color: $muted-grey;
+      }
+
       &:hover {
         color: $secondary;
       }
@@ -88,6 +101,10 @@ Navbar
   .navbar-item{
     color: $white;
     font-size: 1.2rem;
+
+    @media all and (max-width: $desktop) {
+      color: $muted-grey;
+    }
 
     &:hover {
       background: none;
